# backend-ctp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: auto-sync.yml
api/: error.xml  json.h  综合交易平台API简介.pps
api/linux/: error.xml
api/win/: DataCollect.h  SMCertApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  config.ini  error.xml  hiredis.lib  hiredis_static.lib  redis++.lib  redis++_static.lib  thostmduserapi.lib  thosttraderapi.lib  thosttraderapi_sm.lib
src/: MdSpi.cpp  MdSpi.h  TraderSpi.cpp  TraderSpi.h  config-example.ini  global.cpp  global.h  json.hpp  jsoncpp.cpp  main.cpp
